--- a/server.csproj
+++ b/server.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>36807383-c8d4-447d-8b68-2fb95ac37f1b</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
